same update\fix + update swagger ver 2.1.1
